--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
 * {
   font-family: Arial, sans-serif;
-  max-width: 100%;
   overflow: auto;
 }
 .text-center {
   text-align: center;
+}
+body {
+  background-color: #0093e9;
+  background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
 }
