--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,16 @@
+body {
+  background-color: #0093e9;
+  background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
 * {
   font-family: Arial, sans-serif;
   overflow: auto;
 }
 .text-center {
   text-align: center;
-}
-body {
-  background-color: #0093e9;
-  background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
 }
