--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,10 @@ html {
   margin-left: auto;
   margin-right: auto;
 }
+
+@media only screen and (max-width: 600px) {
+  .hidden {
+    display: none;
+    visibility: hidden;
+  }
+}
